# gsm-api

./: .dockerignore  .firebaserc  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  TECH_SPEC.md  firebase.json  firebase.smoke.json  firestore.indexes.json  firestore.rules  firestore.rules.dev  pytest.ini
api/: pyproject.toml
api/app/: constants.py  deps.py  errors.py  logging.py  main.py  observability.py  rate_limit.py  security.py  settings.py  telemetry.py
api/app/dependencies/: premium.py  repos.py
api/app/models/: __init__.py  base.py  common.py  device_token.py  enums.py  journal.py  leaderboard.py  league.py  match.py  notification.py  onboarding.py  play.py  point_history.py  region_config.py  scouting.py  share.py  skill_dna.py  skill_taxonomy.py  stats.py  ticker.py  tier.py  user.py  venue.py  venue_suggestion.py
api/app/repos/: __init__.py  base.py  broadcasts_repo.py  divisions_repo.py  journal_repo.py  leaderboard_repo.py  leagues_repo.py  mappers.py  matches_repo.py  notification_intent_repo.py  offers_repo.py  point_history_repo.py  query_contract.py  region_config_repo.py  scouting_repo.py  stats_repo.py  ticker_repo.py  tier_config_repo.py  users_repo.py  venue_repo.py  venue_suggestions_repo.py
api/app/routers/: __init__.py  account.py  clubhouse.py  device_tokens.py  improve.py  lab.py  leagues.py  matches.py  onboarding.py  play.py  players.py  venues.py
api/app/services/: account_service.py  auth_admin.py  clubhouse_service.py  journal_service.py  league_service.py  match_confirmation_service.py  onboarding_service.py  (+6 more)
(+426 files in other folders)
