[project]
name = "gsm-api"
version = "0.1.0"
description = "GameSetMatch API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "google-cloud-firestore>=2.16",
  "google-cloud-logging>=3.11",
  "firebase-admin>=6.5",
  "pydantic>=2.7",
  "google-auth>=2.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "freezegun>=1.5",
  "ruff>=0.6",
  "mypy>=1.11"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uvicorn]
factory = false

[tool.ruff]
line-length = 100
